chore: update examples tsconfig

--- a/@examples/astro/tsconfig.json
+++ b/@examples/astro/tsconfig.json
@@ -1,3 +1,6 @@
 {
-    "extends": ["astro/tsconfigs/strict", "../../tsconfig.json"]
+    "extends": ["../../tsconfig.json", "astro/tsconfigs/strict"],
+    "compilerOptions": {
+        "baseUrl": "."
+    }
 }
