--- a/@examples/nuxt/tsconfig.json
+++ b/@examples/nuxt/tsconfig.json
@@ -1,7 +1,7 @@
 {
     // https://nuxt.com/docs/guide/concepts/typescript
-    "extends": [
-        "./.nuxt/tsconfig.json",
-        "../../tsconfig.json"
-    ]
+    "extends": ["../../tsconfig.json", "./.nuxt/tsconfig.json"],
+    "compilerOptions": {
+        "baseUrl": "."
+    }
 }
