--- a/@examples/remix/tsconfig.json
+++ b/@examples/remix/tsconfig.json
@@ -1,18 +1,10 @@
 {
-    "extends": [
-        "../../tsconfig.json"
-    ],
-    "include": [
-        "remix.env.d.ts",
-        "**/*.ts",
-        "**/*.tsx"
-    ],
+    "extends": ["../../tsconfig.json"],
+    "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
     "compilerOptions": {
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "ES2019"
-        ],
+        "baseUrl": ".",
+
+        "lib": ["DOM", "DOM.Iterable", "ES2019"],
         "isolatedModules": true,
         "esModuleInterop": true,
         "jsx": "react-jsx",
@@ -22,11 +14,8 @@
         "strict": true,
         "allowJs": true,
         "forceConsistentCasingInFileNames": true,
-        "baseUrl": ".",
         "paths": {
-            "~/*": [
-                "./app/*"
-            ]
+            "~/*": ["./app/*"]
         },
         // Remix takes care of building everything in `remix build`.
         "noEmit": true
