--- a/@examples/solid-start/tsconfig.json
+++ b/@examples/solid-start/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "baseUrl": ".",
+
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "target": "ESNext",
@@ -9,7 +11,6 @@
         "jsxImportSource": "solid-js",
         "jsx": "preserve",
         "strict": true,
-        "types": ["solid-start/env"],
-        "baseUrl": "./"
+        "types": ["solid-start/env"]
     }
 }
