--- a/@examples/svelte-kit/tsconfig.json
+++ b/@examples/svelte-kit/tsconfig.json
@@ -1,9 +1,8 @@
 {
-    "extends": [
-        "./.svelte-kit/tsconfig.json",
-        "../../tsconfig.json"
-    ],
+    "extends": ["../../tsconfig.json", "./.svelte-kit/tsconfig.json"],
     "compilerOptions": {
+        "baseUrl": ".",
+
         "allowJs": true,
         "checkJs": true,
         "esModuleInterop": true,
