feat(babel-plugin): use string literals for obj keys

--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -5,6 +5,9 @@
     "license": "MIT",
     "main": "lib/index.cjs",
     "module": "lib/index.js",
+    "exports": {
+        "./cache/": "./lib/cache/"
+    },
     "publishConfig": {
         "access": "public"
     },
