chore: build updates

--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -10,9 +10,9 @@
             "import": "./lib/index.js",
             "require": "./lib/index.cjs"
         },
-        "./package.json": "./package.json",
         "./cache/": "./lib/cache/",
-        "./src/helpers/transformWorker": "./lib/src/helpers/transformWorker.js"
+        "./src/": "./src/",
+        "./macro": "./macro.ts"
     },
     "publishConfig": {
         "access": "public"
