--- a/@taddy/vite-plugin/package.json
+++ b/@taddy/vite-plugin/package.json
@@ -1,4 +1,5 @@
 {
+    "private": true,
     "name": "@taddy/vite-plugin",
     "version": "0.1.0-alpha.0",
     "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
