feat(taddy/next-plugin): initial implementation

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "name": "root",
     "workspaces": {
         "packages": [
+            "@examples/*",
             "@taddy/*",
             "@docs/*",
             "taddy",
