--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -13,6 +13,7 @@
         "@reatom/core": "1.1.5",
         "@reatom/react": "1.1.5",
         "@taddy/babel-plugin": "^0.1.0-alpha.0",
+        "@taddy/next-plugin": "^0.1.0-alpha.0",
         "filer": "1.4.1",
         "history": "5.3.0",
         "lz-string": "1.5.0",
