--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,6 @@
 {
     "extends": "./tsconfig.build.json",
     "compilerOptions": {
-        "incremental": true,
-
-        "outDir": "lib"
+        "incremental": true
     }
 }
