--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -18,6 +18,7 @@
         "history": "5.3.0",
         "lz-string": "1.5.0",
         "next": "13.2.4",
+        "path-browserify": "^1.0.1",
         "postcss-js": "4.0.1",
         "prettier": "2.8.4",
         "qhistory": "1.1.0",
