--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -42,7 +42,7 @@
         "babel-helper-evaluate-path": "^0.5.0",
         "common-tags": "^1.8.2",
         "convert-source-map": "^2.0.0",
-        "find-cache-dir": "^4.0.0",
+        "find-cache-dir": "3.3.2",
         "lilconfig": "^2.1.0",
         "postcss": "^8.4.21",
         "postcss-js": "^4.0.1",
