--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "license": "MIT",
     "engines": {
-        "node": ">=16"
+        "node": "16.x"
     },
     "scripts": {
         "start": "lerna run start --stream --parallel --no-private",
@@ -43,6 +43,7 @@
         "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
         "@typescript-eslint/parser": "^5.54.1",
+        "babel-jest": "^29.5.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.7.0",
         "eslint-import-resolver-typescript": "^3.5.3",
