chore(taddy/babel-plugin): return clean on prebuild

--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -28,6 +28,7 @@
         "compile": "rollup -c --bundleConfigAsCjs",
         "prestart": "yarn clean",
         "start": "yarn compile --watch",
+        "prebuild": "yarn clean",
         "build": "yarn compile"
     },
     "dependencies": {
