--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -9,6 +9,9 @@
         "start": "next start"
     },
     "dependencies": {
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.21.5",
+        "@babel/standalone": "^7.21.2",
         "@mdx-js/react": "2.3.0",
         "@reatom/core": "1.1.5",
         "@reatom/react": "1.1.5",
