--- a/@taddy/babel-plugin/tsconfig.json
+++ b/@taddy/babel-plugin/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "lib",
+        "module": "CommonJS",
 
-        "baseUrl": "."
+        "baseUrl": ".",
+        "rootDir": "."
     }
 }
