--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -18,6 +18,7 @@
         "@taddy/babel-plugin": "^0.1.0-alpha.0",
         "@taddy/next-plugin": "^0.1.0-alpha.0",
         "filer": "1.4.1",
+        "framer-motion": "^10.16.4",
         "history": "5.3.0",
         "lz-string": "1.5.0",
         "next": "13.2.4",
