--- a/@taddy/babel-plugin/tsconfig.json
+++ b/@taddy/babel-plugin/tsconfig.json
@@ -2,9 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "lib",
-        "module": "CommonJS",
 
-        "baseUrl": ".",
-        "rootDir": "."
+        "baseUrl": "."
     }
 }
