--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,6 +8,7 @@
         "importHelpers": true,
         "jsx": "react-jsx",
         "lib": ["dom", "dom.iterable", "esnext"],
+        "module": "nodenext",
         "moduleResolution": "nodenext",
         "noFallthroughCasesInSwitch": false,
         "noImplicitAny": false,
